# high_security_firmware

./: Cargo.toml  README.md  output_signature_file_path  wallet.json
files/: file_test.txt  file_test.txt.sig  file_test_2.txt  files_test_2.txt
keys/: Alice.pk8  Bob.pk8  Bob.pub.pk8  Mallory.pk8  Mallory.pub.pk8  bob.pk8  test_person.pk8  test_person.pub.pk8
signature_paths_directory/: bob_sig_path.json  mallory_sig_path.json
signatures/: blayde_file_test.txt.sig  bob_file_test.txt.sig  bob_file_test_2.txt.sig  file_test_file_test.txt.sig  test_persona_.tmpEvBt2k.sig  test_persona_.tmpben8cb.sig  test_persona_.tmpwE9tAY.sig  test_persona_1_file_test.txt.sig  test_persona_2_file_test.txt.sig  test_persona_3_file_test.txt.sig  test_persona_4_file_test.txt.sig  test_persona_file_test.txt.sig  test_persona_file_test.txt.sig.sig  test_persona_file_test_2.txt.sig
src/: cipher_suite.rs  commands.rs  error.rs  file_ops.rs  header.rs  header_access.rs  lib.rs  main.rs  persona.rs  wallet.rs
tests/: commands_test.rs  errors_test.rs  file_ops_test.rs  main_and_commands_test.rs  official_test.rs  official_tests.rs  security_tests.rs  updated_tests.rs  wallet_test.rs
wallet/: Isaac.json  alice.json  blayde.json  bob.json  mallory.json  test_persona.json  testpersona.json  testpersona1.json  testpersona2.json  testpersona3.json  testpersona4.json  testpersonaempty.json  testpersonalarge.json  testpersonatampered.json
