[package]
name = "rust_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
clap = { version = "4.5.1", features = ["derive"] }
ring = "=0.17.8"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
